Revert "feat: filter fees by status and type "
This reverts commit c838c1bfa4822a8de03966183ac6211fdbf1ea9a.
