# doc/api.yml
@@ -2033,7 +2033,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StaffMember'
+                 $ref: '#/components/schemas/StaffMember'
         '400':
           $ref: '#/components/responses/400'
         '403':
@@ -2408,16 +2408,6 @@ paths:
         - Paying
       summary: Get all student fees filtered by status and month
       parameters:
-        - name: transaction_status
-          required: false
-          in: query
-          schema:
-            $ref: '#/components/schemas/MpbsStatus'
-        - name: type
-          required: false
-          in: query
-          schema:
-            $ref: '#/components/schemas/FeeTypeEnum'
         - name: status
           in: query
           description: "See the PaymentStatus object for its value."
@@ -2464,7 +2454,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FeesWithStats'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Fee'
         '400':
           $ref: '#/components/responses/400'
         '403':
@@ -5458,14 +5450,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Payment'
-    FeesWithStats:
-      properties:
-        statistics:
-          $ref: '#/components/schemas/FeesStatistics'
-        data:
-          type: array
-          items:
-            $ref: '#/components/schemas/Fee'
     Fee:
       allOf:
         - $ref: '#/components/schemas/CreateFee'
@@ -5990,13 +5974,17 @@ components:
           type: integer
         late_fees:
           type: integer
-        pending_transaction:
-          type: integer
-        paid_by_transaction:
-          type: integer
         total_monthly_fees:
           type: integer
         total_yearly_fees:
+          type: integer
+        total_of_actual_month_fees:
+          type: integer
+        total_paid_of_actual_month_fees:
+          type: integer
+        total_unpaid_of_actual_month_fees:
+          type: integer
+        total_late_of_actual_month_fees:
           type: integer
     Letter:
       type: object
